# claude-usage

./: .gitignore  CHECKLIST.md  LICENSE  PLAN.txt  README.md  package.json
.github/workflows/: release.yml
pkg/: PKGBUILD
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  config.rs  error.rs  lib.rs  main.rs  notify.rs  poller.rs  state.rs  tray.rs
src/lib/: UsagePanel.svelte  countdown.ts  types.ts
src/routes/: +page.svelte
